scrollbar fix  and color

--- a/css/site.css
+++ b/css/site.css
@@ -46,19 +46,16 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 @media screen and (max-width: 1024px) {
 
     html,
     body {
-        height: 103%;
         margin: 0;
         padding: 0;
         display: flex;
         flex-direction: column;
-        overflow-x: hidden;
     }
 
 }
@@ -95,15 +92,12 @@ nav {
 .navlink {
     color: var(--color-text) !important;
     text-decoration: none;
-}
-
-.navlink:hover {
-    color: var(--secondary) !important;
-    text-decoration: none;
-    border: solid 1px var(--secondary);
+    border: solid 1px transparent;
     border-radius: 8px;
+
 }
 
+.navlink:hover,
 .navlink.active {
     color: var(--secondary) !important;
     border: solid 1px var(--secondary);
@@ -112,6 +106,8 @@ nav {
 
 ul {
     gap: 20px;
+    flex-wrap: wrap;
+    max-width: 100%;
 }
 
 
@@ -255,8 +251,8 @@ button {
 @media (min-width: 1025px) {
     .RightPanel {
         position: fixed;
-            top: 10;
-            z-index: 100;
+        top: 10;
+        z-index: 100;
     }
 }
 
@@ -354,4 +350,35 @@ span {
 .fade-in.visible {
     opacity: 1;
     transform: none;
+}
+
+/* Algemene scrollbar styling */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--background-accent);
+    /* Donkere achtergrond */
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+    /* Lichtblauw duim */
+    border-radius: 10px;
+    border: 2px solid var(--background-accent);
+    /* Voor 'padding' effect */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(195, 100%, 60%);
+    /* Iets lichtere blauw op hover */
+}
+
+* {
+    scrollbar-width: thin;
+    /* Dunne scrollbar */
+    scrollbar-color: var(--secondary) var(--background-accent);
 }
